fix table size on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -92,5 +92,10 @@ table {
     justify-content: space-around;
     flex-direction: column;
 }
+
+.table-parent {
+  width: 35.5%;
+}
+
 }
 
